--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
